[FE] Fix overlap image

--- a/src/Page/ProductDetailPage/index.css
+++ b/src/Page/ProductDetailPage/index.css
@@ -2,7 +2,7 @@
     width: 100%;
 }
 
-.slick-slider {
+.slider-container .slick-slider {
     height: 80px;
 }
 
